starlitsun_v3/admin_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: admin-deployment
  labels:
    app: adminportal
spec:
  replicas: 2
  selector:
    matchLabels:
      app: adminportal
  template:
    metadata:
      labels:
        app: adminportal
    spec:
      containers:
        - name: adminportal
          image: bhavika79/starlitsun_adminportal:v3
          ports:
            - containerPort: 5000
