starlitsun_v3/customer_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: starlitsun-deployment
  labels:
    app: customerportal
spec:
  replicas: 2
  selector:
    matchLabels:
      app: customerportal
  template:
    metadata: 
      labels:
        app: customerportal
    spec: 
      containers:
        - name: customerportal
          image: bhavika79/starlitsun_app:v4
          ports:
            - containerPort: 5000
