starlitsun_v3/admin_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: admin-service
spec:
  selector:
    app: adminportal
  ports:
  - port: 80
    targetPort: 5000
