starlitsun_v3/cutomer_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: customer-service
spec:
  selector:
    app: customerportal
  ports:
  - port: 80
    targetPort: 5000
