starlitsun_v3/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: starlitsun-ingress

spec:
  ingressClassName: nginx

  rules:

  - host: admin.starlitsun.local

    http:
      paths:

      - path: /
        pathType: Prefix

        backend:
          service:
            name: admin-service

            port:
              number: 80

  - host: customer.starlitsun.local

    http:
      paths:

      - path: /
        pathType: Prefix

        backend:
          service:
            name: customer-service

            port:
              number: 80
